--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   shared_preferences: ^2.5.3
   google_fonts: ^6.3.1
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
