--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   fl_chart: ^0.69.0
   device_preview: ^1.2.0
   flutter_bloc: ^9.1.1
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
