--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   fl_chart: ^0.69.0
   device_preview: ^1.2.0
   flutter_bloc: ^9.1.1
-
+  provider: ^6.0.0
+  candlesticks: ^2.1.0  
 dev_dependencies:
   flutter_test:
     sdk: flutter
